# ivy

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  cli.py  pyproject.toml  run.py
.github/ISSUE_TEMPLATE/: bug-report.yaml  improvement.yaml
.github/workflows/: branch-on-tag.yaml  deploy-docs-on-tag.yaml  render-paper.yaml  test-codebase.yaml  test-development-setup.yaml  test-production-setup.yaml  test.yaml
config/: config.template.json
docs/: bun.lockb  package-lock.json  package.json  postcss.config.js  style.css  tailwind.config.js  theme.config.jsx  tsconfig.json
docs/components/: config-schema-object.ts  config-schema.ts  foreign-config-schema.ts  message-archive-item-schema.ts  schema-renderers.tsx  state-schema.ts
docs/components/latest/: config-schema.ts  message-archive-item-schema.ts  state-schema.ts
docs/components/schemas/: config-schema.ts  foreign-config-schema.ts  message-archive-item-schema.ts  state-schema.ts
docs/components/v1.0/: state-schema-schema.ts
docs/pages/: _app.mdx  _meta.json  configuration.mdx  faq.md  faq.mdx  getting-started.mdx  index.md  index.mdx  overview.mdx
docs/pages/api-reference/: _meta.json  cli.md  configuration.mdx  internal-communication.mdx  run.md  src.md
docs/pages/api-reference/src/: __init__.md  constants.md  init.md  main.md
docs/pages/api-reference/src/backend/: init.md  tenta_backend.md  tenta_connector.md  thingsboard_backend.md
docs/pages/api-reference/src/modules/: dummy_procedure.md  module_base_class.md  system_checks.md  updater.md
docs/pages/api-reference/src/procedures/: __init__.md  dummy_procedure.md  init.md  system_checks.md
docs/pages/api-reference/src/types/: __init__.md  config.md  init.md  messages.md  state.md
docs/pages/api-reference/src/utils/: __init__.md  exponential_backoff.md  functions.md  init.md  logger.md  messaging_agent.md  module_base_class.md  procedure_manager.md  state_interface.md  updater.md
docs/pages/backends/: general.mdx  tenta.mdx  thingsboard.mdx
docs/pages/concepts/: _meta.json  file-system-layout.mdx  over-the-air-updates.mdx  procedures.mdx
docs/pages/contributing/: _meta.json  contributing.mdx
docs/pages/core-concepts/: _meta.json  file-system-layout.mdx  over-the-air-updates.mdx
docs/pages/file-interfaces/: configuration.mdx  documentation.mdx  logging.mdx  logs.mdx  messages.mdx  state.mdx
docs/pages/guides/: configuration.mdx
docs/pages/interfaces/: configuration.mdx  documentation.mdx  logging.mdx  messages.mdx  state.mdx
docs/pages/iot-backends/: general.mdx
docs/pages/latest/: _meta.json
docs/pages/latest/api-reference/: configuration.mdx  internal-communication.mdx
docs/pages/latest/iot-backends/: general.mdx
docs/pages/v1.0/: _meta.json  index.mdx
docs/pages/v1.0/api-reference/: configuration.mdx  internal-communication.mdx
docs/pages/v1.0/core-concepts/: data-streams.mdx
docs/pages/v1.0/iot-backends/: _meta.json
docs/public/images/: architecture.excalidraw
docs/scripts/: export_api_reference.py  export_config_schema.py  export_json_schemas.py  generate_api_reference.py  generate_apiref.py  generate_jsonschema.py  sync.py  utils.py
paper/: paper.bib  paper.md  render.sh
paper/figures/: ivy-architecture-drawing.tldr
scripts/: mosquitto_start.sh  mosquitto_stop.sh  mosquitto_test.sh  run_tests_ci.sh  run_tests_integration.sh  run_tests_quick.sh  run_thingsboard.sh  setup_development.py  setup_production.py
src/: __init__.py  constants.py  main.py
src/backend/: __init__.py  tenta.py  tenta_backend.py  tenta_connector.py  thingsboard_backend.py
src/modules/: __init__.py  dummy_procedure.py  system_checks.py  updater.py
src/procedures/: __init__.py  dummy_procedure.py  system_checks.py
src/types/: __init__.py  config.py  messages.py  state.py
src/utils/: __init__.py  exponential_backoff.py  functions.py  lifecycle_manager.py  logger.py  mainloop_toggle.py  messaging_agent.py  module_base_class.py  procedure_manager.py  state_interface.py  updater.py
tests/: fixtures.py
tests/integration/: test_config.py  test_connection_to_backend.py  test_connection_to_repository.py  test_local_config.py  test_repository_connection.py
tests/quick/: test_api_reference_sync.py  test_config_validation.py  test_lifecycle_manager.py  test_logging.py  test_mainlock.py  test_messaging_agent.py  test_pyproject_toml.py  test_static_types.py
tests/repository/: test_api_reference_sync.py  test_config.py  test_config_template.py  test_pyproject_toml.py  test_remote_configuration.py  test_static_types.py
tests/updater/: test_cli_pointer_switching.py  test_code_download.py  test_config_receiving.py  test_config_update.py  test_pytest_verification.py  test_remote_configuration.py  test_venv_creation.py
tests/updater/data/: .gitignore
tests/updater/full/: test_reconfiguration.py  test_version_update.py  utils.py
tests/updater/units/: test_cli_pointer_switching.py  test_code_download.py  test_config_receiving.py  test_pytest_verification.py  test_venv_creation.py
tests/utils/: messaging_agent.py  test_logging.py  test_mainlock.py  test_messaging_agent.py
