[project]
name = "ivy"
version = "1.0.0"
description = "A Data Acquisition System for Distributed Sensor Networks Supporting Remote Configuration and Software Updates"
requires-python = ">=3.10,<4.0"
authors = [{ name = "Moritz Makowski", email = "moritz.makowski@tum.de" }]
dependencies = [
  "click>=8.1.7",
  "filelock>=3.16.1",
  "pydantic>=2.10.4",
  "pytest>=8.3.3",
  "python-dotenv>=1.0.1",
  "psutil>=6.1.0",
  "tenta>=0.1.5",
  "tum-esm-utils>=2.5.3",
  "typing-extensions>=4.12.2",
  "paho-mqtt>=2.1.0",
]
classifiers = [
  "License :: OSI Approved :: GNU General Public License (GPL)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
license = { text = "GPL-3.0" }
readme = "README.md"

[project.urls]
repository = "https://github.com/tum-esm/ivy"
documentation = "https://tum-esm-ivy.netlify.app/"

[project.optional-dependencies]
dev = [
  "docstring-parser>=0.16",
  "jsonref>=1.1.0",
  "mypy>=1.14.0",
  "pytest-cov>=6.0.0",
  "setuptools>=75.5.0",
  "types-psutil>=6.1.0.20241102",
  "ruff>=0.8.4",
  "pytest-order>=1.3.0",
]
[tool.pdm]
distribution = false

[tool.ruff]
line-length = 100

[tool.mypy]
implicit_reexport = true
plugins = ["pydantic.mypy"]
strict = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["jsonref"]

[tool.pytest.ini_options]
markers = [
  "quick: can be run in any environment (< 10s)",
  "updater: can be run in any environment (> 10s)",
  "integration: can only be run on a configured system (< 10s)",
  "version_change: will run before switching to a new version",
]
